// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BlockUI block fullscreen 1`] = `
<body
  class="p-overflow-hidden"
>
  <div>
    <div
      class="p-blockui-container"
    />
  </div>
  <div
    class="p-blockui p-component-overlay p-component-overlay-enter p-blockui-document"
    style="z-index: 1101;"
  />
</body>
`;

exports[`BlockUI block panel 1`] = `
<body
  class=""
>
  <div>
    <div
      class="p-blockui-container"
    >
      <div
        class="p-panel p-component"
      >
        <div
          aria-hidden="false"
          aria-labelledby="pr_id_1_header"
          class="p-toggleable-content"
          id="pr_id_1_content"
          role="region"
        >
          <div
            class="p-panel-content"
          >
            blocked
          </div>
        </div>
      </div>
      <div
        class="p-blockui p-component-overlay p-component-overlay-enter"
        style="z-index: 2102;"
      />
    </div>
  </div>
</body>
`;

exports[`BlockUI unblock panel 1`] = `
<body
  class=""
>
  <div>
    <div
      class="p-blockui-container"
    >
      <div
        class="p-panel p-component"
      >
        <div
          aria-hidden="false"
          aria-labelledby="pr_id_2_header"
          class="p-toggleable-content"
          id="pr_id_2_content"
          role="region"
        >
          <div
            class="p-panel-content"
          >
            unblocked
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
